ass6_14CS30031/y.output
Terminals unused in grammar

   SINGLE_COMMENT
   MULTI_COMMENT
   STRUCT_KEYWORD
   TYPEDEF_KEYWORD
   UNION_KEYWORD
   MINUS_EQUAL


State 124 conflicts: 1 shift/reduce
State 216 conflicts: 1 shift/reduce
State 351 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 N: %empty

    2 M: %empty

    3 function_end: declaration_specifiers declarator

    4 primary_expression: IDENTIFIER
    5                   | INTEGER_CONSTANT
    6                   | FLOAT_CONSTANT
    7                   | ENUMERATION
    8                   | CHAR_CONSTANT
    9                   | STRING_LITERAL
   10                   | '(' expression ')'

   11 postfix_expression: primary_expression
   12                   | postfix_expression '[' expression ']'
   13                   | postfix_expression '(' ')'
   14                   | postfix_expression '(' argument_expression_list ')'
   15                   | postfix_expression '.' IDENTIFIER
   16                   | postfix_expression VAL_AT IDENTIFIER
   17                   | postfix_expression PLUS_PLUS
   18                   | postfix_expression MINUS_MINUS
   19                   | '(' type_name ')' '{' initializer_list '}'
   20                   | '(' type_name ')' '{' initializer_list ',' '}'

   21 argument_expression_list: assignment_expression
   22                         | argument_expression_list ',' assignment_expression

   23 unary_expression: postfix_expression
   24                 | PLUS_PLUS unary_expression
   25                 | MINUS_MINUS unary_expression
   26                 | unary_operator cast_expression
   27                 | SIZEOF_KEYWORD unary_expression
   28                 | SIZEOF_KEYWORD '(' type_name ')'

   29 unary_operator: '&'
   30               | '*'
   31               | '+'
   32               | '-'
   33               | '~'
   34               | '!'

   35 cast_expression: unary_expression
   36                | '(' type_name ')' cast_expression

   37 multiplicative_expression: cast_expression
   38                          | multiplicative_expression '*' cast_expression
   39                          | multiplicative_expression '/' cast_expression
   40                          | multiplicative_expression '%' cast_expression

   41 additive_expression: multiplicative_expression
   42                    | additive_expression '+' multiplicative_expression
   43                    | additive_expression '-' multiplicative_expression

   44 shift_expression: additive_expression
   45                 | shift_expression LEFT_SHIFT additive_expression
   46                 | shift_expression RIGHT_SHIFT additive_expression

   47 relational_expression: shift_expression
   48                      | relational_expression '<' shift_expression
   49                      | relational_expression '>' shift_expression
   50                      | relational_expression LESS_EQUAL shift_expression
   51                      | relational_expression GREATER_EQUAL shift_expression

   52 equality_expression: relational_expression
   53                    | equality_expression NOT_EQUAL relational_expression
   54                    | equality_expression EQUAL_EQUAL relational_expression

   55 AND_expression: equality_expression
   56               | AND_expression '&' equality_expression

   57 exclusive_OR_expression: AND_expression
   58                        | exclusive_OR_expression '^' AND_expression

   59 inclusive_OR_expression: exclusive_OR_expression
   60                        | inclusive_OR_expression '|' exclusive_OR_expression

   61 logical_AND_expression: inclusive_OR_expression
   62                       | logical_AND_expression N LOGICAL_AND M inclusive_OR_expression N

   63 logical_OR_expression: logical_AND_expression
   64                      | logical_OR_expression N LOGICAL_OR M logical_AND_expression N

   65 conditional_expression: logical_OR_expression
   66                       | logical_OR_expression N '?' M expression N ':' M conditional_expression

   67 assignment_expression: conditional_expression
   68                      | unary_expression assignment_operator assignment_expression

   69 assignment_operator: '='
   70                    | OR_EQUAL
   71                    | BITWISENOT_EQUAL
   72                    | AND_EQUAL
   73                    | PLUS_EQUAL
   74                    | STAR_EQUAL
   75                    | BY_EQUAL
   76                    | PERCENT_EQUAL
   77                    | LEFT_SHIFT_EQUAL
   78                    | RIGHT_SHIFT_EQUAL

   79 expression: assignment_expression
   80           | expression ',' assignment_expression

   81 constant_expression: conditional_expression

   82 declaration: declaration_specifiers init_declarator_list ';'
   83            | declaration_specifiers ';'

   84 declaration_specifiers: storage_class_specifier declaration_specifiers
   85                       | storage_class_specifier
   86                       | type_specifier declaration_specifiers
   87                       | type_specifier
   88                       | type_qualifier declaration_specifiers
   89                       | type_qualifier
   90                       | function_specifier
   91                       | function_specifier declaration_specifiers

   92 init_declarator_list: init_declarator
   93                     | init_declarator_list ',' init_declarator

   94 init_declarator: declarator
   95                | declarator '=' initializer

   96 storage_class_specifier: EXTERN_KEYWORD
   97                        | STATIC_KEYWORD
   98                        | AUTO_KEYWORD
   99                        | REGISTER_KEYWORD

  100 type_specifier: VOID_KEYWORD
  101               | CHAR_KEYWORD
  102               | SHORT_KEYWORD
  103               | INT_KEYWORD
  104               | LONG_KEYWORD
  105               | FLOAT_KEYWORD
  106               | DOUBLE_KEYWORD
  107               | SIGNED_KEYWORD
  108               | UNSIGNED_KEYWORD
  109               | BOOL_KEYWORD
  110               | COMPLEX_KEYWORD
  111               | IMAGINARY_KEYWORD
  112               | enum_specifier

  113 specifier_qualifier_list: type_specifier specifier_qualifier_list
  114                         | type_specifier
  115                         | type_qualifier specifier_qualifier_list
  116                         | type_qualifier

  117 enum_specifier: ENUM_KEYWORD IDENTIFIER '{' enumerator_list '}'
  118               | ENUM_KEYWORD '{' enumerator_list '}'
  119               | ENUM_KEYWORD '{' enumerator_list ',' '}'
  120               | ENUM_KEYWORD IDENTIFIER '{' enumerator_list ',' '}'
  121               | ENUM_KEYWORD IDENTIFIER

  122 enumerator_list: enumerator
  123                | enumerator_list ',' enumerator

  124 enumerator: ENUMERATION
  125           | ENUMERATION '=' constant_expression

  126 type_qualifier: CONST_KEYWORD
  127               | RESTRICT_KEYWORD
  128               | VOLATILE_KEYWORD

  129 function_specifier: INLINE_KEYWORD

  130 declarator: pointer direct_declarator
  131           | direct_declarator

  132 direct_declarator: IDENTIFIER
  133                  | '(' declarator ')'
  134                  | direct_declarator '[' type_qualifier_list_opt assignment_expression_opt ']'
  135                  | direct_declarator '[' STATIC_KEYWORD type_qualifier_list assignment_expression ']'
  136                  | direct_declarator '[' STATIC_KEYWORD assignment_expression ']'
  137                  | direct_declarator '[' type_qualifier_list STATIC_KEYWORD assignment_expression ']'
  138                  | direct_declarator '[' type_qualifier_list '*' ']'
  139                  | direct_declarator '[' '*' ']'
  140                  | direct_declarator '(' parameter_type_list_opt ')'
  141                  | direct_declarator '(' identifier_list ')'

  142 pointer: '*' type_qualifier_list
  143        | '*'
  144        | '*' pointer
  145        | '*' type_qualifier_list pointer

  146 type_qualifier_list_opt: type_qualifier_list
  147                        | %empty

  148 assignment_expression_opt: assignment_expression
  149                          | %empty

  150 type_qualifier_list: type_qualifier
  151                    | type_qualifier_list type_qualifier

  152 parameter_type_list_opt: parameter_type_list
  153                        | %empty

  154 parameter_type_list: parameter_list
  155                    | parameter_list ',' ELLIPSES

  156 parameter_list: parameter_declaration
  157               | parameter_list ',' parameter_declaration

  158 parameter_declaration: declaration_specifiers declarator
  159                      | declaration_specifiers

  160 identifier_list: IDENTIFIER
  161                | identifier_list ',' IDENTIFIER

  162 type_name: specifier_qualifier_list

  163 initializer: assignment_expression
  164            | '{' initializer_list '}'
  165            | '{' initializer_list ',' '}'

  166 initializer_list: designation initializer
  167                 | initializer_list ',' designation initializer
  168                 | initializer
  169                 | initializer_list ',' initializer

  170 designation: designator_list '='

  171 designator_list: designator

  172 designator: '[' constant_expression ']'
  173           | '.' IDENTIFIER

  174 statement: labeled_statement
  175          | compound_statement
  176          | expression_statement
  177          | selection_statement
  178          | iteration_statement
  179          | jump_statement

  180 labeled_statement: IDENTIFIER ':' statement
  181                  | CASE_KEYWORD constant_expression ':' statement
  182                  | DEFAULT_KEYWORD ':' statement

  183 compound_statement: '{' block_item_list '}'
  184                   | '{' '}'

  185 block_item_list: block_item
  186                | block_item_list M block_item

  187 block_item: declaration
  188           | statement

  189 expression_statement: expression ';'
  190                     | ';'

  191 expression_opt: expression
  192               | %empty

  193 selection_statement: IF_KEYWORD '(' expression N ')' M statement N
  194                    | IF_KEYWORD '(' expression N ')' M statement N ELSE_KEYWORD M statement N
  195                    | SWITCH_KEYWORD '(' expression ')' statement

  196 iteration_statement: WHILE_KEYWORD M '(' expression N ')' M statement
  197                    | DO_KEYWORD M statement M WHILE_KEYWORD '(' expression ')' ';'
  198                    | FOR_KEYWORD '(' expression_opt ';' M expression_opt N ';' M expression_opt N ')' M statement

  199 jump_statement: GOTO_KEYWORD IDENTIFIER ';'
  200               | CONTINUE_KEYWORD ';'
  201               | BREAK_KEYWORD ';'
  202               | RETURN_KEYWORD expression ';'
  203               | RETURN_KEYWORD ';'

  204 translation_unit: external_declaration
  205                 | translation_unit external_declaration

  206 external_declaration: function_definition
  207                     | declaration

  208 function_definition: declaration_specifiers declarator declaration_list compound_statement
  209                    | function_end compound_statement

  210 declaration_list: declaration
  211                 | declaration_list declaration


Terminals, with rules where they appear

$end (0) 0
'!' (33) 34
'%' (37) 40
'&' (38) 29 56
'(' (40) 10 13 14 19 20 28 36 133 140 141 193 194 195 196 197 198
')' (41) 10 13 14 19 20 28 36 133 140 141 193 194 195 196 197 198
'*' (42) 30 38 138 139 142 143 144 145
'+' (43) 31 42
',' (44) 20 22 80 93 119 120 123 155 157 161 165 167 169
'-' (45) 32 43
'.' (46) 15 173
'/' (47) 39
':' (58) 66 180 181 182
';' (59) 82 83 189 190 197 198 199 200 201 202 203
'<' (60) 48
'=' (61) 69 95 125 170
'>' (62) 49
'?' (63) 66
'[' (91) 12 134 135 136 137 138 139 172
']' (93) 12 134 135 136 137 138 139 172
'^' (94) 58
'{' (123) 19 20 117 118 119 120 164 165 183 184
'|' (124) 60
'}' (125) 19 20 117 118 119 120 164 165 183 184
'~' (126) 33
error (256)
SINGLE_COMMENT (258)
MULTI_COMMENT (259)
AUTO_KEYWORD (260) 98
ENUM_KEYWORD (261) 117 118 119 120 121
RESTRICT_KEYWORD (262) 127
UNSIGNED_KEYWORD (263) 108
BREAK_KEYWORD (264) 201
EXTERN_KEYWORD (265) 96
RETURN_KEYWORD (266) 202 203
VOID_KEYWORD (267) 100
CASE_KEYWORD (268) 181
FLOAT_KEYWORD (269) 105
SHORT_KEYWORD (270) 102
VOLATILE_KEYWORD (271) 128
CHAR_KEYWORD (272) 101
FOR_KEYWORD (273) 198
SIGNED_KEYWORD (274) 107
WHILE_KEYWORD (275) 196 197
CONST_KEYWORD (276) 126
GOTO_KEYWORD (277) 199
SIZEOF_KEYWORD (278) 27 28
BOOL_KEYWORD (279) 109
CONTINUE_KEYWORD (280) 200
IF_KEYWORD (281) 193 194
STATIC_KEYWORD (282) 97 135 136 137
COMPLEX_KEYWORD (283) 110
DEFAULT_KEYWORD (284) 182
INLINE_KEYWORD (285) 129
STRUCT_KEYWORD (286)
IMAGINARY_KEYWORD (287) 111
DO_KEYWORD (288) 197
INT_KEYWORD (289) 103
SWITCH_KEYWORD (290) 195
DOUBLE_KEYWORD (291) 106
LONG_KEYWORD (292) 104
TYPEDEF_KEYWORD (293)
ELSE_KEYWORD (294) 194
REGISTER_KEYWORD (295) 99
UNION_KEYWORD (296)
INTEGER_CONSTANT (297) 5
FLOAT_CONSTANT (298) 6
ENUMERATION (299) 7 124 125
CHAR_CONSTANT (300) 8
LEFT_SHIFT_EQUAL (301) 77
RIGHT_SHIFT_EQUAL (302) 78
ELLIPSES (303) 155
VAL_AT (304) 16
PLUS_PLUS (305) 17 24
MINUS_MINUS (306) 18 25
LEFT_SHIFT (307) 45
RIGHT_SHIFT (308) 46
LESS_EQUAL (309) 50
GREATER_EQUAL (310) 51
EQUAL_EQUAL (311) 54
NOT_EQUAL (312) 53
LOGICAL_AND (313) 62
LOGICAL_OR (314) 64
STAR_EQUAL (315) 74
BY_EQUAL (316) 75
PERCENT_EQUAL (317) 76
PLUS_EQUAL (318) 73
MINUS_EQUAL (319)
AND_EQUAL (320) 72
BITWISENOT_EQUAL (321) 71
OR_EQUAL (322) 70
STRING_LITERAL (323) 9
IDENTIFIER (324) 4 15 16 117 120 121 132 160 161 173 180 199


Nonterminals, with rules where they appear

$accept (94)
    on left: 0
N (95)
    on left: 1, on right: 62 64 66 193 194 196 198
M (96)
    on left: 2, on right: 62 64 66 186 193 194 196 197 198
function_end (97)
    on left: 3, on right: 209
primary_expression (98)
    on left: 4 5 6 7 8 9 10, on right: 11
postfix_expression (99)
    on left: 11 12 13 14 15 16 17 18 19 20, on right: 12 13 14 15 16
    17 18 23
argument_expression_list (100)
    on left: 21 22, on right: 14 22
unary_expression (101)
    on left: 23 24 25 26 27 28, on right: 24 25 27 35 68
unary_operator (102)
    on left: 29 30 31 32 33 34, on right: 26
cast_expression (103)
    on left: 35 36, on right: 26 36 37 38 39 40
multiplicative_expression (104)
    on left: 37 38 39 40, on right: 38 39 40 41 42 43
additive_expression (105)
    on left: 41 42 43, on right: 42 43 44 45 46
shift_expression (106)
    on left: 44 45 46, on right: 45 46 47 48 49 50 51
relational_expression (107)
    on left: 47 48 49 50 51, on right: 48 49 50 51 52 53 54
equality_expression (108)
    on left: 52 53 54, on right: 53 54 55 56
AND_expression (109)
    on left: 55 56, on right: 56 57 58
exclusive_OR_expression (110)
    on left: 57 58, on right: 58 59 60
inclusive_OR_expression (111)
    on left: 59 60, on right: 60 61 62
logical_AND_expression (112)
    on left: 61 62, on right: 62 63 64
logical_OR_expression (113)
    on left: 63 64, on right: 64 65 66
conditional_expression (114)
    on left: 65 66, on right: 66 67 81
assignment_expression (115)
    on left: 67 68, on right: 21 22 68 79 80 135 136 137 148 163
assignment_operator (116)
    on left: 69 70 71 72 73 74 75 76 77 78, on right: 68
expression (117)
    on left: 79 80, on right: 10 12 66 80 189 191 193 194 195 196 197
    202
constant_expression (118)
    on left: 81, on right: 125 172 181
declaration (119)
    on left: 82 83, on right: 187 207 210 211
declaration_specifiers (120)
    on left: 84 85 86 87 88 89 90 91, on right: 3 82 83 84 86 88 91
    158 159 208
init_declarator_list (121)
    on left: 92 93, on right: 82 93
init_declarator (122)
    on left: 94 95, on right: 92 93
storage_class_specifier (123)
    on left: 96 97 98 99, on right: 84 85
type_specifier (124)
    on left: 100 101 102 103 104 105 106 107 108 109 110 111 112, on right:
    86 87 113 114
specifier_qualifier_list (125)
    on left: 113 114 115 116, on right: 113 115 162
enum_specifier (126)
    on left: 117 118 119 120 121, on right: 112
enumerator_list (127)
    on left: 122 123, on right: 117 118 119 120 123
enumerator (128)
    on left: 124 125, on right: 122 123
type_qualifier (129)
    on left: 126 127 128, on right: 88 89 115 116 150 151
function_specifier (130)
    on left: 129, on right: 90 91
declarator (131)
    on left: 130 131, on right: 3 94 95 133 158 208
direct_declarator (132)
    on left: 132 133 134 135 136 137 138 139 140 141, on right: 130
    131 134 135 136 137 138 139 140 141
pointer (133)
    on left: 142 143 144 145, on right: 130 144 145
type_qualifier_list_opt (134)
    on left: 146 147, on right: 134
assignment_expression_opt (135)
    on left: 148 149, on right: 134
type_qualifier_list (136)
    on left: 150 151, on right: 135 137 138 142 145 146 151
parameter_type_list_opt (137)
    on left: 152 153, on right: 140
parameter_type_list (138)
    on left: 154 155, on right: 152
parameter_list (139)
    on left: 156 157, on right: 154 155 157
parameter_declaration (140)
    on left: 158 159, on right: 156 157
identifier_list (141)
    on left: 160 161, on right: 141 161
type_name (142)
    on left: 162, on right: 19 20 28 36
initializer (143)
    on left: 163 164 165, on right: 95 166 167 168 169
initializer_list (144)
    on left: 166 167 168 169, on right: 19 20 164 165 167 169
designation (145)
    on left: 170, on right: 166 167
designator_list (146)
    on left: 171, on right: 170
designator (147)
    on left: 172 173, on right: 171
statement (148)
    on left: 174 175 176 177 178 179, on right: 180 181 182 188 193
    194 195 196 197 198
labeled_statement (149)
    on left: 180 181 182, on right: 174
compound_statement (150)
    on left: 183 184, on right: 175 208 209
block_item_list (151)
    on left: 185 186, on right: 183 186
block_item (152)
    on left: 187 188, on right: 185 186
expression_statement (153)
    on left: 189 190, on right: 176
expression_opt (154)
    on left: 191 192, on right: 198
selection_statement (155)
    on left: 193 194 195, on right: 177
iteration_statement (156)
    on left: 196 197 198, on right: 178
jump_statement (157)
    on left: 199 200 201 202 203, on right: 179
translation_unit (158)
    on left: 204 205, on right: 0 205
external_declaration (159)
    on left: 206 207, on right: 204 205
function_definition (160)
    on left: 208 209, on right: 206
declaration_list (161)
    on left: 210 211, on right: 208 211


State 0

    0 $accept: . translation_unit $end

    AUTO_KEYWORD       shift, and go to state 1
    ENUM_KEYWORD       shift, and go to state 2
    RESTRICT_KEYWORD   shift, and go to state 3
    UNSIGNED_KEYWORD   shift, and go to state 4
    EXTERN_KEYWORD     shift, and go to state 5
    VOID_KEYWORD       shift, and go to state 6
    FLOAT_KEYWORD      shift, and go to state 7
    SHORT_KEYWORD      shift, and go to state 8
    VOLATILE_KEYWORD   shift, and go to state 9
    CHAR_KEYWORD       shift, and go to state 10
    SIGNED_KEYWORD     shift, and go to state 11
    CONST_KEYWORD      shift, and go to state 12
    BOOL_KEYWORD       shift, and go to state 13
    STATIC_KEYWORD     shift, and go to state 14
    COMPLEX_KEYWORD    shift, and go to state 15
    INLINE_KEYWORD     shift, and go to state 16
    IMAGINARY_KEYWORD  shift, and go to state 17
    INT_KEYWORD        shift, and go to state 18
    DOUBLE_KEYWORD     shift, and go to state 19
    LONG_KEYWORD       shift, and go to state 20
    REGISTER_KEYWORD   shift, and go to state 21

    function_end             go to state 22
    declaration              go to state 23
    declaration_specifiers   go to state 24
    storage_class_specifier  go to state 25
    type_specifier           go to state 26
    enum_specifier           go to state 27
    type_qualifier           go to state 28
    function_specifier       go to state 29
    translation_unit         go to state 30
    external_declaration     go to state 31
    function_definition      go to state 32


State 1

   98 storage_class_specifier: AUTO_KEYWORD .

    $default  reduce using rule 98 (storage_class_specifier)


State 2

  117 enum_specifier: ENUM_KEYWORD . IDENTIFIER '{' enumerator_list '}'
  118               | ENUM_KEYWORD . '{' enumerator_list '}'
  119               | ENUM_KEYWORD . '{' enumerator_list ',' '}'
  120               | ENUM_KEYWORD . IDENTIFIER '{' enumerator_list ',' '}'
  121               | ENUM_KEYWORD . IDENTIFIER

    IDENTIFIER  shift, and go to state 33
    '{'         shift, and go to state 34


State 3

  127 type_qualifier: RESTRICT_KEYWORD .

    $default  reduce using rule 127 (type_qualifier)


State 4

  108 type_specifier: UNSIGNED_KEYWORD .

    $default  reduce using rule 108 (type_specifier)


State 5

   96 storage_class_specifier: EXTERN_KEYWORD .

    $default  reduce using rule 96 (storage_class_specifier)


State 6

  100 type_specifier: VOID_KEYWORD .

    $default  reduce using rule 100 (type_specifier)


State 7

  105 type_specifier: FLOAT_KEYWORD .

    $default  reduce using rule 105 (type_specifier)


State 8

  102 type_specifier: SHORT_KEYWORD .

    $default  reduce using rule 102 (type_specifier)


State 9

  128 type_qualifier: VOLATILE_KEYWORD .

    $default  reduce using rule 128 (type_qualifier)


State 10

  101 type_specifier: CHAR_KEYWORD .

    $default  reduce using rule 101 (type_specifier)


State 11

  107 type_specifier: SIGNED_KEYWORD .

    $default  reduce using rule 107 (type_specifier)


State 12

  126 type_qualifier: CONST_KEYWORD .

    $default  reduce using rule 126 (type_qualifier)


State 13

  109 type_specifier: BOOL_KEYWORD .

    $default  reduce using rule 109 (type_specifier)


State 14

   97 storage_class_specifier: STATIC_KEYWORD .

    $default  reduce using rule 97 (storage_class_specifier)


State 15

  110 type_specifier: COMPLEX_KEYWORD .

    $default  reduce using rule 110 (type_specifier)


State 16

  129 function_specifier: INLINE_KEYWORD .

    $default  reduce using rule 129 (function_specifier)


State 17

  111 type_specifier: IMAGINARY_KEYWORD .

    $default  reduce using rule 111 (type_specifier)


State 18

  103 type_specifier: INT_KEYWORD .

    $default  reduce using rule 103 (type_specifier)


State 19

  106 type_specifier: DOUBLE_KEYWORD .

    $default  reduce using rule 106 (type_specifier)


State 20

  104 type_specifier: LONG_KEYWORD .

    $default  reduce using rule 104 (type_specifier)


State 21

   99 storage_class_specifier: REGISTER_KEYWORD .

    $default  reduce using rule 99 (storage_class_specifier)


State 22

  209 function_definition: function_end . compound_statement

    '{'  shift, and go to state 35

    compound_statement  go to state 36


State 23

  207 external_declaration: declaration .

    $default  reduce using rule 207 (external_declaration)


State 24

    3 function_end: declaration_specifiers . declarator
   82 declaration: declaration_specifiers . init_declarator_list ';'
   83            | declaration_specifiers . ';'
  208 function_definition: declaration_specifiers . declarator declaration_list compound_statement

    IDENTIFIER  shift, and go to state 37
    '('         shift, and go to state 38
    '*'         shift, and go to state 39
    ';'         shift, and go to state 40

    init_declarator_list  go to state 41
    init_declarator       go to state 42
    declarator            go to state 43
    direct_declarator     go to state 44
    pointer               go to state 45


State 25

   84 declaration_specifiers: storage_class_specifier . declaration_specifiers
   85                       | storage_class_specifier .

    AUTO_KEYWORD       shift, and go to state 1
    ENUM_KEYWORD       shift, and go to state 2
    RESTRICT_KEYWORD   shift, and go to state 3
    UNSIGNED_KEYWORD   shift, and go to state 4
    EXTERN_KEYWORD     shift, and go to state 5
    VOID_KEYWORD       shift, and go to state 6
    FLOAT_KEYWORD      shift, and go to state 7
    SHORT_KEYWORD      shift, and go to state 8
    VOLATILE_KEYWORD   shift, and go to state 9
    CHAR_KEYWORD       shift, and go to state 10
    SIGNED_KEYWORD     shift, and go to state 11
    CONST_KEYWORD      shift, and go to state 12
    BOOL_KEYWORD       shift, and go to state 13
    STATIC_KEYWORD     shift, and go to state 14
    COMPLEX_KEYWORD    shift, and go to state 15
    INLINE_KEYWORD     shift, and go to state 16
    IMAGINARY_KEYWORD  shift, and go to state 17
    INT_KEYWORD        shift, and go to state 18
    DOUBLE_KEYWORD     shift, and go to state 19
    LONG_KEYWORD       shift, and go to state 20
    REGISTER_KEYWORD   shift, and go to state 21

    $default  reduce using rule 85 (declaration_specifiers)

    declaration_specifiers   go to state 46
    storage_class_specifier  go to state 25
    type_specifier           go to state 26
    enum_specifier           go to state 27
    type_qualifier           go to state 28
    function_specifier       go to state 29


State 26

   86 declaration_specifiers: type_specifier . declaration_specifiers
   87                       | type_specifier .

    AUTO_KEYWORD       shift, and go to state 1
    ENUM_KEYWORD       shift, and go to state 2
    RESTRICT_KEYWORD   shift, and go to state 3
    UNSIGNED_KEYWORD   shift, and go to state 4
    EXTERN_KEYWORD     shift, and go to state 5
    VOID_KEYWORD       shift, and go to state 6
    FLOAT_KEYWORD      shift, and go to state 7
    SHORT_KEYWORD      shift, and go to state 8
    VOLATILE_KEYWORD   shift, and go to state 9
    CHAR_KEYWORD       shift, and go to state 10
    SIGNED_KEYWORD     shift, and go to state 11
    CONST_KEYWORD      shift, and go to state 12
    BOOL_KEYWORD       shift, and go to state 13
    STATIC_KEYWORD     shift, and go to state 14
    COMPLEX_KEYWORD    shift, and go to state 15
    INLINE_KEYWORD     shift, and go to state 16
    IMAGINARY_KEYWORD  shift, and go to state 17
    INT_KEYWORD        shift, and go to state 18
    DOUBLE_KEYWORD     shift, and go to state 19
    LONG_KEYWORD       shift, and go to state 20
    REGISTER_KEYWORD   shift, and go to state 21

    $default  reduce using rule 87 (declaration_specifiers)

    declaration_specifiers   go to state 47
    storage_class_specifier  go to state 25
    type_specifier           go to state 26
    enum_specifier           go to state 27
    type_qualifier           go to state 28
    function_specifier       go to state 29


State 27

  112 type_specifier: enum_specifier .

    $default  reduce using rule 112 (type_specifier)


State 28

   88 declaration_specifiers: type_qualifier . declaration_specifiers
   89                       | type_qualifier .

    AUTO_KEYWORD       shift, and go to state 1
    ENUM_KEYWORD       shift, and go to state 2
    RESTRICT_KEYWORD   shift, and go to state 3
    UNSIGNED_KEYWORD   shift, and go to state 4
    EXTERN_KEYWORD     shift, and go to state 5
    VOID_KEYWORD       shift, and go to state 6
    FLOAT_KEYWORD      shift, and go to state 7
    SHORT_KEYWORD      shift, and go to state 8
    VOLATILE_KEYWORD   shift, and go to state 9
    CHAR_KEYWORD       shift, and go to state 10
    SIGNED_KEYWORD     shift, and go to state 11
    CONST_KEYWORD      shift, and go to state 12
    BOOL_KEYWORD       shift, and go to state 13
    STATIC_KEYWORD     shift, and go to state 14
    COMPLEX_KEYWORD    shift, and go to state 15
    INLINE_KEYWORD     shift, and go to state 16
    IMAGINARY_KEYWORD  shift, and go to state 17
    INT_KEYWORD        shift, and go to state 18
    DOUBLE_KEYWORD     shift, and go to state 19
    LONG_KEYWORD       shift, and go to state 20
    REGISTER_KEYWORD   shift, and go to state 21

    $default  reduce using rule 89 (declaration_specifiers)

    declaration_specifiers   go to state 48
    storage_class_specifier  go to state 25
    type_specifier           go to state 26
    enum_specifier           go to state 27
    type_qualifier           go to state 28
    function_specifier       go to state 29


State 29

   90 declaration_specifiers: function_specifier .
   91                       | function_specifier . declaration_specifiers

    AUTO_KEYWORD       shift, and go to state 1
    ENUM_KEYWORD       shift, and go to state 2
    RESTRICT_KEYWORD   shift, and go to state 3
    UNSIGNED_KEYWORD   shift, and go to state 4
    EXTERN_KEYWORD     shift, and go to state 5
    VOID_KEYWORD       shift, and go to state 6
    FLOAT_KEYWORD      shift, and go to state 7
    SHORT_KEYWORD      shift, and go to state 8
    VOLATILE_KEYWORD   shift, and go to state 9
    CHAR_KEYWORD       shift, and go to state 10
    SIGNED_KEYWORD     shift, and go to state 11
    CONST_KEYWORD      shift, and go to state 12
    BOOL_KEYWORD       shift, and go to state 13
    STATIC_KEYWORD     shift, and go to state 14
    COMPLEX_KEYWORD    shift, and go to state 15
    INLINE_KEYWORD     shift, and go to state 16
    IMAGINARY_KEYWORD  shift, and go to state 17
    INT_KEYWORD        shift, and go to state 18
    DOUBLE_KEYWORD     shift, and go to state 19
    LONG_KEYWORD       shift, and go to state 20
    REGISTER_KEYWORD   shift, and go to state 21

    $default  reduce using rule 90 (declaration_specifiers)

    declaration_specifiers   go to state 49
    storage_class_specifier  go to state 25
    type_specifier           go to state 26
    enum_specifier           go to state 27
    type_qualifier           go to state 28
    function_specifier       go to state 29


State 30

    0 $accept: translation_unit . $end
  205 translation_unit: translation_unit . external_declaration

    $end               shift, and go to state 50
    AUTO_KEYWORD       shift, and go to state 1
    ENUM_KEYWORD       shift, and go to state 2
    RESTRICT_KEYWORD   shift, and go to state 3
    UNSIGNED_KEYWORD   shift, and go to state 4
    EXTERN_KEYWORD     shift, and go to state 5
    VOID_KEYWORD       shift, and go to state 6
    FLOAT_KEYWORD      shift, and go to state 7
    SHORT_KEYWORD      shift, and go to state 8
    VOLATILE_KEYWORD   shift, and go to state 9
    CHAR_KEYWORD       shift, and go to state 10
    SIGNED_KEYWORD     shift, and go to state 11
    CONST_KEYWORD      shift, and go to state 12
    BOOL_KEYWORD       shift, and go to state 13
    STATIC_KEYWORD     shift, and go to state 14
    COMPLEX_KEYWORD    shift, and go to state 15
    INLINE_KEYWORD     shift, and go to state 16
    IMAGINARY_KEYWORD  shift, and go to state 17
    INT_KEYWORD        shift, and go to state 18
    DOUBLE_KEYWORD     shift, and go to state 19
    LONG_KEYWORD       shift, and go to state 20
    REGISTER_KEYWORD   shift, and go to state 21

    function_end             go to state 22
    declaration              go to state 23
    declaration_specifiers   go to state 24
    storage_class_specifier  go to state 25
    type_specifier           go to state 26
    enum_specifier           go to state 27
    type_qualifier           go to state 28
    function_specifier       go to state 29
    external_declaration     go to state 51
    function_definition      go to state 32


State 31

  204 translation_unit: external_declaration .

    $default  reduce using rule 204 (translation_unit)


State 32

  206 external_declaration: function_definition .

    $default  reduce using rule 206 (external_declaration)


State 33

  117 enum_specifier: ENUM_KEYWORD IDENTIFIER . '{' enumerator_list '}'
  120               | ENUM_KEYWORD IDENTIFIER . '{' enumerator_list ',' '}'
  121               | ENUM_KEYWORD IDENTIFIER .

    '{'  shift, and go to state 52

    $default  reduce using rule 121 (enum_specifier)


State 34

  118 enum_specifier: ENUM_KEYWORD '{' . enumerator_list '}'
  119               | ENUM_KEYWORD '{' . enumerator_list ',' '}'

    ENUMERATION  shift, and go to state 53

    enumerator_list  go to state 54
    enumerator       go to state 55


State 35

  183 compound_statement: '{' . block_item_list '}'
  184                   | '{' . '}'

    AUTO_KEYWORD       shift, and go to state 1
    ENUM_KEYWORD       shift, and go to state 2
    RESTRICT_KEYWORD   shift, and go to state 3
    UNSIGNED_KEYWORD   shift, and go to state 4
    BREAK_KEYWORD      shift, and go to state 56
    EXTERN_KEYWORD     shift, and go to state 5
    RETURN_KEYWORD     shift, and go to state 57
    VOID_KEYWORD       shift, and go to state 6
    CASE_KEYWORD       shift, and go to state 58
    FLOAT_KEYWORD      shift, and go to state 7
    SHORT_KEYWORD      shift, and go to state 8
    VOLATILE_KEYWORD   shift, and go to state 9
    CHAR_KEYWORD       shift, and go to state 10
    FOR_KEYWORD        shift, and go to state 59
    SIGNED_KEYWORD     shift, and go to state 11
    WHILE_KEYWORD      shift, and go to state 60
    CONST_KEYWORD      shift, and go to state 12
    GOTO_KEYWORD       shift, and go to state 61
    SIZEOF_KEYWORD     shift, and go to state 62
    BOOL_KEYWORD       shift, and go to state 13
    CONTINUE_KEYWORD   shift, and go to state 63
    IF_KEYWORD         shift, and go to state 64
    STATIC_KEYWORD     shift, and go to state 14
    COMPLEX_KEYWORD    shift, and go to state 15
    DEFAULT_KEYWORD    shift, and go to state 65
    INLINE_KEYWORD     shift, and go to state 16
    IMAGINARY_KEYWORD  shift, and go to state 17
    DO_KEYWORD         shift, and go to state 66
    INT_KEYWORD        shift, and go to state 18
    SWITCH_KEYWORD     shift, and go to state 67
    DOUBLE_KEYWORD     shift, and go to state 19
    LONG_KEYWORD       shift, and go to state 20
    REGISTER_KEYWORD   shift, and go to state 21
    INTEGER_CONSTANT   shift, and go to state 68
    FLOAT_CONSTANT     shift, and go to state 69
    ENUMERATION        shift, and go to state 70
    CHAR_CONSTANT      shift, and go to state 71
    PLUS_PLUS          shift, and go to state 72
    MINUS_MINUS        shift, and go to state 73
    STRING_LITERAL     shift, and go to state 74
    IDENTIFIER         shift, and go to state 75
    '('                shift, and go to state 76
    '{'                shift, and go to state 35
    '}'                shift, and go to state 77
    '&'                shift, and go to state 78
    '*'                shift, and go to state 79
    '+'                shift, and go to state 80
    '-'                shift, and go to state 81
    '~'                shift, and go to state 82
    '!'                shift, and go to state 83
    ';'                shift, and go to state 84
